# sonar

./: .gitignore  2opt-optimization.html  CLAUDE.md  README.md  index.html  optimization-comparison.html  sonar.html  sort.html  test.html  zigzag.html  zigzaz-with-efficiency-calculated.html
.github/workflows/: rust-benchmark.yml  test.yml
algorithms/: angular-sort.js  brute-force.js  genetic.js  greedy-edge.js  index.js  nearest-neighbor.js  simulated-annealing.js  sonar-visit.js  two-opt.js  utils.js  zigzag.js
experiments/: find-max-points.js
rust/: Cargo.toml
rust/src/: angular_sort.rs  brute_force.rs  genetic.rs  greedy_edge.rs  main.rs  nearest_neighbor.rs  simulated_annealing.rs  sonar_visit.rs  two_opt.rs  utils.rs  zigzag.rs
tests/: algorithms.test.js  performance.test.js
